refactor(all): eliminar codigo innecesario o en desuso